fix align dropdown dll

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,6 @@ h1 {
     background-color: salmon;
 }
 
-.nav-link {
+.lvl {
     float: right;
 }
